--- a/challenge-js/package.json
+++ b/challenge-js/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.15"
   }
 }
